<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WhichAreYouInto"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <LinearLayout
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:id="@+id/colum1"
            android:layout_below="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:backgroundTint="@color/gray"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:text="@string/Modern"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/Fantasy"
                android:textColor="@color/black"
                android:layout_width="170dp"
                android:layout_marginEnd="24dp"
                android:layout_height="50dp"
                style="?android:attr/buttonBarButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:id="@+id/colum2"
            android:layout_below="@+id/colum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:backgroundTint="@color/gray"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:text="@string/Horror"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/Romance"
                android:textColor="@color/black"
                android:layout_width="170dp"
                android:layout_marginEnd="24dp"
                android:layout_height="50dp"
                style="?android:attr/buttonBarButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:id="@+id/colum3"
            android:layout_below="@+id/colum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle">
            <Button
                android:backgroundTint="@color/gray"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:text="@string/Thriller"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/gray"
                android:text="@string/Action"
                android:textColor="@color/black"
                android:layout_width="170dp"
            android:layout_marginEnd="24dp"
            android:layout_height="50dp"
                style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:id="@+id/colum4"
        android:layout_below="@+id/colum3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:backgroundTint="@color/gray"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:text="@string/Drama"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/gray"
            android:text="@string/SliceOfLife"
            android:textColor="@color/black"
            android:layout_width="170dp"
            android:layout_marginEnd="24dp"
            android:layout_height="50dp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:id="@+id/colum5"
        android:layout_below="@+id/colum4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:backgroundTint="@color/gray"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:text="@string/Comedy"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/gray"
            android:text="@string/SuperHero"
            android:textColor="@color/black"
            android:layout_width="170dp"
            android:layout_marginEnd="24dp"
            android:layout_height="50dp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>

</RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>