<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/Sing_up"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text1"
                    android:text="@string/enjoy"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="170dp"
                    android:src="@drawable/img_7">

                </ImageView>
            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_below="@id/lin1"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="Autofill,LabelFor">

        </EditText>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_below="@id/editTextTextEmailAddress"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="10dp">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="300dp"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/fgpassword">

        </TextView>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="340dp"
            android:backgroundTint="@color/Green"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

        </Button>

        <Button
            android:id="@+id/btnsinup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="340dp"
            android:backgroundTint="@color/dark"
            android:text="@string/SignUp"
            android:textColor="@color/white">
        </Button>
        <TextView
            android:id="@+id/text3"
            android:layout_marginTop="400dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Orloginwith"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginStart="150dp"
            android:textColor="@color/white">
        </TextView>
        <LinearLayout
            android:id="@+id/lin2"
            android:layout_below="@+id/text3"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="120dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/img_2"
                android:importantForAccessibility="no">
            </ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:src="@drawable/img_3"
                android:importantForAccessibility="no">
            </ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/img_4"
                android:importantForAccessibility="no">
            </ImageView>
        </LinearLayout>


        <TextView
            android:id="@+id/text4"
            android:layout_marginTop="510dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HaveProblem"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginStart="100dp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/text5"
            android:layout_marginTop="530dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserAgreement"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginStart="80dp"
            android:textColor="@color/white">
        </TextView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>