<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/app_background">

    <RelativeLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        >
        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/createacc"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text1"
                    android:text="@string/enjoy"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="170dp"
                    android:src="@drawable/img_6">

                </ImageView>
            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_below="@id/lin1"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="Autofill,LabelFor">

        </EditText>

        <EditText
            android:id="@+id/edittext"
            android:layout_below="@id/editTextTextEmailAddress"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="Autofill,LabelFor">
        </EditText>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_below="@id/edittext"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:background="@color/gray"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="10dp">
        </EditText>

        <Button
            android:id="@+id/sinup"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="340dp"
            android:backgroundTint="@color/Green"
            android:text="@string/SignUp"
            android:textColor="@color/white">
        </Button>
        <TextView
            android:id="@+id/text3"
            android:layout_marginTop="420dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Orloginwith"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginStart="155dp"
            android:textColor="@color/white">
        </TextView>
        <LinearLayout
            android:id="@+id/lin2"
            android:layout_below="@+id/text3"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="125dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/img_2"
                android:importantForAccessibility="no">
            </ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:src="@drawable/img_3"
                android:importantForAccessibility="no">
            </ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/img_4"
                android:importantForAccessibility="no">
            </ImageView>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>