<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="MissingDefaultResource">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:gravity="center"
        android:background="@color/app_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m30"
        android:layout_marginStart="@dimen/m10"
        android:layout_marginEnd="@dimen/m10"
        android:layout_marginBottom="@dimen/m10"
        android:orientation="horizontal"
        android:background="@drawable/bg_color">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m10"
            android:src="@drawable/ic_action_sharch"
            android:contentDescription="@string/image" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/search"
            android:inputType="text"
            android:autofillHints="@string/products" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/m10"
            android:src="@drawable/camera"
            android:contentDescription="@string/image" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="10"
        tools:listitem="@layout/view_holder_anime" />
</FrameLayout>